--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <title>Lessons Learned by Nayara</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned by Nayara</h1>
@@ -16,16 +18,16 @@
             <section>
                 <h3>Lições aprendidas:</h3>
                 <ol id="licoes_aprendidas">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Unix e Shell</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Funcionamento da Internet</li>
+                    <li>Modelo Cliente & Servidor</li>
+                    <li>Protocolo HTTP e HTTPS</li>
+                    <li>HTML</li>
+                    <li>Introdução a CSS</li>
+                    <li>HTML Semântico</li>
+                    <li>Soft-skills: Introdução ao Desenvolvimento de Inteligência Emocional.</li>
                 </ol>
             </section>
             <section>
@@ -53,4 +55,5 @@
         <p>RODAPÉ</p>
     </footer>
 </body>
+
 </html>
