Correção de bug

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Requisito 3 -->
     <section>
         <img id="minha_foto" src="project-img.jpg" alt="Foto de Juan Morallys em CampinaGrande-PB">
-        
+
             <!-- Requisito 7 -->
         <a class="link" href="https://www.linkedin.com/in/juanmorallys/" target="_blank">LinkedIn</a>
 
@@ -30,7 +30,7 @@
 
     
     <!-- Requisito 4 -->
-    <div class="content-list">
+    <section class="content-list">
         <section class="lista-ordenada">
             <h3>Lições Aprendidas</h3>
             <ol id="licoes_aprendidas">
@@ -62,7 +62,7 @@
                 <li>Estrutura de dados</li>
             </ul>
         </section>  
-    </div>
+    </section>
 
     <!-- Requisito 8 -->
     <div class="content">
