--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UFT-8">
         <title>Lessons Learned</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -29,6 +30,7 @@
             <h2>O início de uma jornada</h2>
             <p class="article">Meu aprendizado na Trybe começou antes mesmo da aprovação. Logo no curso introdutório, somos apresentados ao JavaScript de forma simples e didática, para então realizar os desafios do processo seletivo. 
                 A prática constante nos prepara para o curso em si, que em menos de um mês de aulas me tornou capaz de criar este site!</p></article>
+
                 <aside><p class="article">O aprendizado assíncrono com certeza foi um grande diferencial na metodologia ativa, servindo para me ensinar o mais importante: aprender a aprender. Pesquisar, manter a mente aberta e compartilhar o conhecimento.</p>
             </aside>
         </div>
