Correção no código index.html

--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
             <!-- Requisito 7 -->
         <a class="link" href="https://www.linkedin.com/in/juanmorallys/" target="_blank">LinkedIn</a>
 
-    </section>  
-    
+    </section>   
 
-    
     <!-- Requisito 4 -->
     <section class="content-list">
         <section class="lista-ordenada">
@@ -81,7 +79,7 @@
     </section>
 
     <!-- Requisito 12 -->
-    <section class="content-table"></section>
+    <section class="content-table">
         <table class="tabela">
             <p><strong>Progressão do Curso</strong></p>
             <tr>
