--- a/index.html
+++ b/index.html
@@ -25,15 +25,14 @@
        </div>
 
         <main>
-        <div>
-        <article id="artigo">
+        <article class="lado_esquerdo" id="artigo">
             <h2>O início de uma jornada</h2>
             <p class="article">Meu aprendizado na Trybe começou antes mesmo da aprovação. Logo no curso introdutório, somos apresentados ao JavaScript de forma simples e didática, para então realizar os desafios do processo seletivo. 
                 A prática constante nos prepara para o curso em si, que em menos de um mês de aulas me tornou capaz de criar este site!</p></article>
 
-                <aside><p class="article">O aprendizado assíncrono com certeza foi um grande diferencial na metodologia ativa, servindo para me ensinar o mais importante: aprender a aprender. Pesquisar, manter a mente aberta e compartilhar o conhecimento.</p>
+                <section class="lado-direito"><aside><p class="article">O aprendizado assíncrono com certeza foi um grande diferencial na metodologia ativa, servindo para me ensinar o mais importante: aprender a aprender. Pesquisar, manter a mente aberta e compartilhar o conhecimento.</p>
             </aside>
-        </div>
+        </section>
     
         <a href="https://www.linkedin.com/in/thaiscarrer/" target="_blank">Linkedin</a>
         <section>
