concluido estilização do perfil

--- a/index.html
+++ b/index.html
@@ -33,30 +33,30 @@
                 <div class="list__box">
                     <h2>Lições Aprendidas</h2>
                     <ol id="licoes_aprendidas">
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
                     </ol>
                 </div>
                 <div class="listas__box">
                     <h2>Lições a Aprender</h2>
                     <ul id="licoes_a_aprender">
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
-                        <li class="list_item"></li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
+                        <li class="list_item">...</li>
                     </ul>
                 </div>
             </section>
