--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     </header>
     <main>
         <article>
-            <h2>"Artigo sobre aprendizado"</h2>
+            <h2>"Primeros 15 dias de aprendizado na Trybe</h2>
             <p>Entre 300 e 600 caracteres.</p>
+        </article>
             <section>
                 <h3>Lições aprendidas:</h3>
                 <ol id="licoes_aprendidas">
@@ -33,19 +34,19 @@
             <section>
                 <h3>Lições a aprender:</h3>
                 <ul id="licoes_a_aprender">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Lógica da Programação e Algoritmos</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>Metodologias Ágeis</li>
+                    <li>Banco de Dados: SLQ, MongoDB</li>
+                    <li>NodeJS</li>
+                    <li>Deployment</li>
+                    <li>Introdução a Python</li>
+                    <li>Programação Orientada a Objetos e Padrões de Projeto</li>
+                    <li>Estrutura de Dados</li>
                 </ul>
             </section>
-        </article>
+        
         <aside>
             <h2>"Passagem sobre meu aprendizado."</h2>
             <p>Entre 100 e 300 caracteres.</p>
