--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lange="pt-br">
+<html lang="pt-br">
     <head>
         <meta charset="UFT-8">
         <title>Lessons Learned</title>
@@ -21,11 +21,11 @@
         </nav>
 
         <div>
-        <img src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" id="minha_foto">
+        <img src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" alt="Thaís sorrindo" id="minha_foto">
        </div>
 
         <main>
-        <article class="lado_esquerdo" id="artigo">
+        <article class="lado-esquerdo" id="artigo">
             <h2>O início de uma jornada</h2>
             <p class="article">Meu aprendizado na Trybe começou antes mesmo da aprovação. Logo no curso introdutório, somos apresentados ao JavaScript de forma simples e didática, para então realizar os desafios do processo seletivo. 
                 A prática constante nos prepara para o curso em si, que em menos de um mês de aulas me tornou capaz de criar este site!</p></article>
