--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     </header>
     <main>
         <article>
-            <h2>"Primeros 15 dias de aprendizado na Trybe</h2>
-            <p>Entre 300 e 600 caracteres.</p>
+            <h2>Primeros 15 dias na Trybe</h2>
+            <p>As duas primeiras semanas de estudo na Trybe foram muito intensas: Bastante informação nova, muitos exercícios práticos, desafios e realizações.<br>
+            A  Tribo B da Turma 16 é super proativa e colaborativa e a equipe de facilitação é maravilhosa. Só gente bacana!</p>
+            <p> Estou adorando o processo, bem feliz com as primeiras conquistas e super empolgada com o caminho a seguir. #vqv #goTrybe</p>
         </article>
-            <section>
-                <h3>Lições aprendidas:</h3>
+        <section>
+            <h3>Lições aprendidas:</h3>
                 <ol id="licoes_aprendidas">
                     <li>Unix e Shell</li>
                     <li>Git</li>
@@ -29,23 +31,23 @@
                     <li>Introdução a CSS</li>
                     <li>HTML Semântico</li>
                     <li>Soft-skills: Introdução ao Desenvolvimento de Inteligência Emocional.</li>
-                </ol>
-            </section>
-            <section>
-                <h3>Lições a aprender:</h3>
-                <ul id="licoes_a_aprender">
-                    <li>Lógica da Programação e Algoritmos</li>
-                    <li>JavaScript</li>
-                    <li>React</li>
-                    <li>Metodologias Ágeis</li>
-                    <li>Banco de Dados: SLQ, MongoDB</li>
-                    <li>NodeJS</li>
-                    <li>Deployment</li>
-                    <li>Introdução a Python</li>
-                    <li>Programação Orientada a Objetos e Padrões de Projeto</li>
-                    <li>Estrutura de Dados</li>
-                </ul>
-            </section>
+                    </ol>
+        </section>
+        <section>
+            <h3>Lições a aprender:</h3>
+            <ul id="licoes_a_aprender">
+                <li>Lógica da Programação e Algoritmos</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Metodologias Ágeis</li>
+                <li>Banco de Dados: SLQ, MongoDB</li>
+                <li>NodeJS</li>
+                <li>Deployment</li>
+                <li>Introdução a Python</li>
+                <li>Programação Orientada a Objetos e Padrões de Projeto</li>
+                <li>Estrutura de Dados</li>
+            </ul>
+        </section>
         
         <aside>
             <h2>"Passagem sobre meu aprendizado."</h2>
