--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <main>
         <article>
             <h2>Primeros 15 dias na Trybe</h2>
-            <p>As duas primeiras semanas de estudo na Trybe foram muito intensas: Bastante informação nova, muitos exercícios práticos, desafios e realizações.<br>
-            A  Tribo B da Turma 16 é super proativa e colaborativa e a equipe de facilitação é maravilhosa. Só gente bacana!</p>
+            <p>As duas primeiras semanas de estudo na <a href="http://www.betrybe.com" target="_blank">Trybe</a> foram muito intensas: Bastante informação nova, muitos exercícios práticos, desafios e realizações.<br>
+            A Tribo B da Turma 16 é super proativa e colaborativa e a equipe de facilitação é maravilhosa. Só gente bacana!</p>
             <p> Estou adorando o processo, bem feliz com as primeiras conquistas e super empolgada com o caminho a seguir. #vqv #goTrybe</p>
         </article>
         <section>
             <h3>Lições aprendidas:</h3>
-                <ol id="licoes_aprendidas">
-                    <li>Unix e Shell</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>Funcionamento da Internet</li>
-                    <li>Modelo Cliente & Servidor</li>
-                    <li>Protocolo HTTP e HTTPS</li>
-                    <li>HTML</li>
-                    <li>Introdução a CSS</li>
-                    <li>HTML Semântico</li>
-                    <li>Soft-skills: Introdução ao Desenvolvimento de Inteligência Emocional.</li>
-                    </ol>
+            <ol id="licoes_aprendidas">
+                <li>Unix e Shell</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Funcionamento da Internet</li>
+                <li>Modelo Cliente & Servidor</li>
+                <li>Protocolo HTTP e HTTPS</li>
+                <li>HTML</li>
+                <li>Introdução a CSS</li>
+                <li>HTML Semântico</li>
+                <li>Soft-skills: Introdução ao Desenvolvimento de Inteligência Emocional.</li>
+            </ol>
         </section>
         <section>
             <h3>Lições a aprender:</h3>
@@ -48,7 +48,6 @@
                 <li>Estrutura de Dados</li>
             </ul>
         </section>
-        
         <aside>
             <h2>"Passagem sobre meu aprendizado."</h2>
             <p>Entre 100 e 300 caracteres.</p>
