--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     </head>
     <body>
         <header id="cabecalho">
-            <h1 id="titulo">Olá meu nome é Izabela Hammerschlag</h1>
+            <h1 id="titulo">Olá, meu nome é Izabela Hammerschlag</h1>
         </header>
         <nav>
+            <p><a href="https://www.linkedin.com/in/izabela-hammerschlag-80bb49216/?originalSubdomain=br" target="_blank">Meu LinkedIn</a></p>
         </nav>
-        <img id="minha_foto" src="minhafoto.png" alt="minha foto">
         <section>
+        <img id="minha_foto" src="minhafoto.png" alt="minha foto">
         <h2>Lista de lições aprendidas:</h2>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
@@ -41,13 +42,13 @@
         </section>
         </ul>
         <article>
-        <p>De UNIX ao HTML e CSS!!! a primeira e a segunda semana na Trybe foram muito intensa e com muito aprendizado. Comecei aprendendo sobre Unix e Bash tanto a parte teorica e historica quanto a pratica, utilizando vários comandos no terminal (shell). Em seguida aprendi sobre Git e GitHub na pratica conseguindo versionar meus codigos em diferentes Branch's na Local para Remota, utilizei VS code para produzir os scripts. Depois estudei sobre a internet (modelo cliente & servidor, etc) e agora estudando muito HTML e CSS e realizando agora o meu primeiro projeto.</p>
+        <p>De UNIX ao HTML e CSS!!! a primeira e a segunda semana na Trybe foram muito intensas e com muito aprendizado. Comecei aprendendo sobre Unix e Bash tanto a parte teorica quanto a pratica, utilizando vários comandos no terminal (shell). Em seguida aprendi sobre Git e GitHub na pratica conseguindo versionar meus codigos em diferentes Branch's na Local para Remota, utilizei VS code para produzir os scripts. Depois estudei sobre a internet (modelo cliente & servidor, etc) e agora estudando muito HTML e CSS e realizando agora o meu primeiro projeto.</p>
         </article>
         <aside>
             <p>Com o HTML e CSS foi possível fazer meu portfolio e colocar para o Mundo ver, além de praticar muito com outros sites aprendendo a estilizar e deixá-lo acessível.</p>
         </aside>
-        <p><a href="https://www.linkedin.com/in/izabela-hammerschlag-80bb49216/?originalSubdomain=br" target="_blank">Meu LinkedIn</a></p>
         <footer id="rodape">
+            <p>Primeiro projeto</p>
         </footer>
         <!– verificado com CodeSniffer ->
     </body>
