terminado header e footer

--- a/index.html
+++ b/index.html
@@ -10,21 +10,61 @@
 <body>
 
   <header id="cabecalho">
-    <h1 id="titulo"> neithan</h1>
+    <h1 id="titulo"> Lições Aprendidas</h1>
     
     <nav>
-      <ul>
-        <li>Contatos</li>
-        <li>Sobre mim</li>
-        <li>Aprendizados</li>
+      <ul><p>Navegação Rápida</p> 
+        <li><a href="#rodape">Contatos</a></li>
+        <li><a href="#main">Sobre mim</a></li>
+        <li><a href="#learnings">Aprendizados</a> </li>
       </ul>
     </nav>
+    <h2>Nathan Nunes</h2>
   </header>
   
-  <main>
+    
+  <main id="main">
     <section>
       <img id="minha_foto" src="nathannunes.jpeg" alt="Imagem de Nathan Nunes">
     </section>
+
+    <table border="solid 1px">
+      <thead>
+        <caption>Status Tryber</caption>
+        <tr>
+          <th class="unbold">#GoTurma16-B</th>
+          <th>Fundamentos</th>
+          <th>Front-end</th>
+          <th>Back-end</th>
+          <th>Introdução Ciência da Computação</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>Total de Blocos</td>
+          <td>10</td>
+          <td>9</td>
+          <td>13</td>
+          <td>6</td>
+        </tr>
+        <tr>
+          <td>Blocos Concluídos</td>
+          <td>3</td>
+          <td>0</td>
+          <td>0</td>
+          <td>0</td>
+        </tr>
+        <tr>
+          <td>Semanas de Trybe</td>
+          <td colspan="4">2 Semanas</td>
+        </tr>
+        <tr>
+          <td>Projetos Concluídos</td>
+          <td colspan="4">1 Projeto</td>
+        </tr>
+      </tbody>
+    </table>
 
     <section id="learnings">
       <section>
