--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h1 id="titulo">Lessons Learned by Nayara</h1>
     </header>
     <main>
+        <section>
+            <img src="profile-picture.jpeg" alt="Nayara sorrindo discretamente." id="minha_foto" width="250px"> 
+            <h3>Nayara Vasconcelos</h3>
+        </section>
         <article>
             <h2>Primeros 15 dias na Trybe</h2>
             <p>As duas primeiras semanas de estudo na <a href="http://www.betrybe.com" target="_blank">Trybe</a> foram muito intensas: Bastante informação nova, muitos exercícios práticos, desafios e realizações.<br>
@@ -19,7 +23,7 @@
             <p> Estou adorando o processo, bem feliz com as primeiras conquistas e super empolgada com o caminho a seguir. #vqv #goTrybe</p>
         </article>
         <section>
-            <h3>Lições aprendidas:</h3>
+            <h3>Lições aprendidas</h3>
             <ol id="licoes_aprendidas">
                 <li>Unix e Shell</li>
                 <li>Git</li>
@@ -34,7 +38,7 @@
             </ol>
         </section>
         <section>
-            <h3>Lições a aprender:</h3>
+            <h3>Lições a aprender</h3>
             <ul id="licoes_a_aprender">
                 <li>Lógica da Programação e Algoritmos</li>
                 <li>JavaScript</li>
