--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </aside>
     </main>
     <footer id="rodape">
-        <p>RODAPÉ</p>
+        <p>Projeto #1</p>
     </footer>
 </body>
 
