terminado header e footer com descricao

--- a/index.html
+++ b/index.html
@@ -107,15 +107,6 @@
           </p>
         </article>
       </section>
-
-      <section>
-        <aside>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quam reprehenderit hic officiis, a eum quos aliquam
-            dignissimos dicta ea nisi, nam exercitationem vitae cupiditate inventore magnam non
-          </p>
-        </aside>
-      </section>
     </section>
   </main>
 
@@ -125,6 +116,15 @@
         <li><a class="linksThemes" href="https://www.linkedin.com/in/nathannunes-/" target="_blank">Linkedin</a></li>
         <li><a class="linksThemes" href="https://github.com/NunesNathan" target="_blank">GitHub</a></li>
       </ul>
+    </section>
+
+    <section>
+      <aside class="footerText">
+        <p>
+          Esse ano eu tomei a maior decisão da minha vida profissional e dei o passo mais gratificante da minha vida,
+          ambos com o mesmo nome <a href="https://www.betrybe.com/" target="_blank">Trybe!</a>
+        </p>
+      </aside>
     </section>
   </footer>
 
