--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             </ul>
         </section>
         <aside>
-            <h2>"Passagem sobre meu aprendizado."</h2>
-            <p>Entre 100 e 300 caracteres.</p>
+            <p>Na Trybe estou aprendendo não apenas habilidades técnicas, como também estou aprendendo habilidades comportamentais.</p>
         </aside>
     </main>
     <footer id="rodape">
