Complete the structure of HTML with CodeSniffer and also CSS with lint:styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Projeto - Lessons Learning</h1>
-        <nav>
+        <nav class="m-nav">
             <h1 style="display: none;">Sumario - Navegação</h1>
             <ul>
                 <li><a href="#minha_foto">Sobre</a></li>
@@ -26,10 +26,10 @@
         <section class="profile">
             <div class="item-profile">
                 <figure>
-                    <img id="minha_foto" src="images/the-rock.jpg" alt="Foto de um homem careca, musculoso usando uma camiseta vermelha e sorrindo">
-                    <figcaption>Dwayne Johnson</figcaption>
+                    <img id="minha_foto" src="images/profile.png" alt="Foto de um homem careca, musculoso usando uma camiseta vermelha e sorrindo">
+                    <figcaption>Savio Silva</figcaption>
                 </figure>
-                <p>Johnson nasceu em 2 de maio de 1972, na cidade californiana de Hayward. A luta livre sempre esteve no sangue do artista. Seu pai, Rocky ‘Soul Man’ Johnson era integrante do primeiro time de campeões afro-americanos, e seu avô, Peter Maivia, estabeleceu-se como um dos pioneiros lutadores de Samoa.</p>
+                <p>Também conhecido como <em>Savin</em>>, tenho vinte e quatro anos, sou nascido em <strong>Caraguatatuba</strong>, no litoral norte de </strong>São Paulo</strong>. Gosto de falar que sempre tive o dom da curiosidade, o que me rendeu muitos brinquedos desmontados quando criança.</p>
             </div>
         </section>
 
@@ -63,10 +63,9 @@
                     <li>SQL</li>
             </section>
             <article class="lado-esquerdo">
-                <h1>Meu aprendizado</h1>
-                <p>Tenho aprendido bastante como um aluno. Desde os comandos mais básicos até os mais populares sobre o sistema Unix. Também bastante sobre HTML com tags, HTML Semântico e CSS. E uma das coisas mais interessantes que ainda estou desenvolvendo mas que estou gostando muito são as aulas de softskills. Estão me possibilitando adquirir um olhar diferente para meus proprios sentimentos.</p>
-                
-                <aside><p>Eu tenho gostado muito do meu desenvolvimento e tenho descoberto em mim qualidades que eu nem imaginava existirem.</p></aside>
+                <h1>Meu aprendizado na Trybe</h1>
+                <p>Eu tenho aprendido muito como um aluno na Trybe. Desde comandos bem básicos até os mais populares e otimizados presentes nos sistemas Unix. Também tenho aprendido bastante até aqui com introdução a HTML, HTML semântico, e introdução ao CSS.</p>
+                <aside><p>Eu tenho gostado bastante do meu desenvolvimento até aqui e também tenho descobertos qualidades que eu nem imaginava que existiam em mim graças a toda equipe da Trybe.</p></aside>
             </article>
         </section>
         <div class="clear"></div>
