Apply corrections and finalized project

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
         <nav class="m-nav">
             <h1 style="display: none;">Sumario - Navegação</h1>
             <ul>
-                <li><a href="#minha_foto">Sobre</a></li>
-                <li><a href="#licoes_aprendidas">Aprendi</a></li>
-                <li><a href="#licoes_a_aprender">Aprender</a></li>
-                <li><a href="#artigo">Artigo</a></li>
-                <li><a href="#rodape">Rodape</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -141,7 +140,7 @@
         <div class="clear"></div>
 
         <ul class="lado-direito">
-            <h1>Referências 2</h1>
+            <h1>Referências</h1>
             <li><a href="https://pt.wikipedia.org/wiki/Dwayne_Johnson" target="_blank" alt="opens new window">Wikipedia (opens new window)</a></li>
         </ul>
         <ul class="lado-direito" style="margin-right: 7%;">
