--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <main>
         <section>
             <img src="profile-picture.jpeg" alt="Nayara sorrindo discretamente." id="minha_foto" width="250px"> 
-            <h3>Nayara Vasconcelos</h3>
+            <h2>Nayara Vasconcelos</h2>
+            <p>Pessoa estudante na Trybe</p>
+            <nav>
+                <a href="http://www.linkedin.com/in/nayara-vasconcelos" target="_blank">LinkedIn</a>
+                <a href="https://github.com/nayara-vasconcelos" target="_blank">GitHub</a>
+                <a href="https://github.com/tryber" target="_blank">Tryber</a>
+        </nav>
         </section>
         <article>
             <h2>Primeros 15 dias na Trybe</h2>
