--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- Rodape -->
     <footer id="rodape">
         <section class="dedicat">
-            <p>A conclusão deste projeto resume-se em dedicação, dedicação pelos envolvidos no curso até e pela minha inspiração em <strong>Bruna Papaleo<strong>.</p>
+            <p>A conclusão deste projeto resume-se em dedicação, dedicação por toda a equipe da trybe envolvidos no curso até agora e pela minha inspiração: <strong>Bruna Papaleo<strong>.</p>
         </section>
 
         <div class="clear"></div>
