--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
   <head>
    <meta charset="UTF-8">
+   <title>Project - Lessons Learned</title>
    <style>
         body {
              background: rgb(253, 251, 251)
