--- a/index.html
+++ b/index.html
@@ -64,6 +64,31 @@
         </aside>
       </section>
     </div>
+
+    <div >
+      <table class="table text-center">
+        <tr>
+          <th>HTML</th>
+          <th>CSS</th>
+          <th>JS</th>
+        </tr>
+        <tr>
+          <td>Semantic HTML</td>
+          <td>Position</td>
+          <td>DOM</td>
+        </tr>
+        <tr>
+          <td>Tags</td>
+          <td>Box-model</td>
+          <td>Events</td>
+        </tr>
+        <tr>
+          <td>Estruturas de página</td>
+          <td>Seletores</td>
+          <td>Arrays</td>
+        </tr>
+      </table>
+    </div>
   </div>
   <footer class="text-center" id="rodape">
     <p>
