--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <br>
     <br>
     
+    <!-- Seção com texto sobre Aprendizado-->
     <h3>Artigo Sobre Aprendizado</h3>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ducimus molestias dicta quas ipsam commodi in odio. Cumque quis omnis, voluptatibus sed, tempora asperiores similique soluta molestias itaque deleniti esse. </p>
