--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Lições aprendidas - Trybe!</h1>
     
-    <img src="./fotoSlack06082021.png"> 
+    <img src="./fotoSlack06082021.png" alt="Rosto de homen preto cabelo black power tirando foto em frente ao espelho com celular na mão"> 
     
     <ol>
         <li>Unix </li>
