--- a/index.html
+++ b/index.html
@@ -22,45 +22,52 @@
     </nav>
     </header>
     <main>
-        <article>
             <section>
                 <img id="minha_foto" src="pp.jpeg" alt="Uma foto minha andando de bicicleta na serra da prainha">
             </section>
-            <section>
-               <table>
-                   <ol id="licoes_aprendidas">
-                       <h2 class="lado-esquerdo">Lições aprendidas:</h2>
-                       <li>CSS</li>
-                       <li>Empatia</li>
-                       <li>Git</li>
-                       <li>GitHub</li>
-                       <li>HTML</li>
-                       <li>HTML Semântico</li>
-                       <li>Internet</li>
-                       <li>Slack</li>
-                       <li>Unix & Bash</li>
-                       <li>Zoom</li>
-                   </ol>
-               </table>
-            </section>
-            <section>
-                <table>
-                    <ul id="licoes_a_aprender">
-                        <h2 class="lado-direito">Lições a aprender:</h2>
-                        <li>JavaScript</li>
-                        <li>DOM</li>
-                        <li>Web Storage</li>
-                        <li>Forms</li>
-                        <li>CSS Flexbox</li>
-                        <li>CSS Responsivo</li>
-                        <li>ES6</li>
-                        <li>Jest</li>
-                        <li>React</li>
-                        <li>SQL</li>
-                    </ul>
-                </table>
-            </section>
-        </article>
+                <section>
+                    <table>
+                        <ol id="licoes_aprendidas">
+                           <h2 class="lado-esquerdo">Lições aprendidas:</h2>
+                           <li>CSS</li>
+                           <li>Empatia</li>
+                           <li>Git</li>
+                           <li>GitHub</li>
+                           <li>HTML</li>
+                           <li>HTML Semântico</li>
+                           <li>Internet</li>
+                           <li>Slack</li>
+                           <li>Unix & Bash</li>
+                           <li>Zoom</li>
+                        </ol>
+                    </table>
+                </section>
+                <section>
+                    <table>
+                        <ul id="licoes_a_aprender">
+                            <h2 class="lado-direito">Lições a aprender:</h2>
+                            <li>JavaScript</li>
+                            <li>DOM</li>
+                            <li>Web Storage</li>
+                            <li>Forms</li>
+                            <li>CSS Flexbox</li>
+                            <li>CSS Responsivo</li>
+                            <li>ES6</li>
+                            <li>Jest</li>
+                            <li>React</li>
+                            <li>SQL</li>
+                        </ul>
+                    </table>
+                </section>
+                    <section>
+                        <article id="info">
+                            <p>Para cada um dos itens acima da lista que eu aprendi foi uma novidade, alguns até eu sabia alguma coisa porém era algo muito razo e pouco consolidado mas ao estar estudando que pra alcançar um conhecimento sólido precisa de prática. E para os itens que estou para aprender estou ansioso e sei com que aprendi até agr vão servir de base para facilitar o aprendizado.</p>
+                        </article>
+                    </section>
+                <aside>
+                    <h4>Dica:</h4>
+                    <p>Se estiver a proucura dos mesmos conhecimento que eu adquiri e que estou para adiquirir basta entrar na <a class="contatos" href="https://app.betrybe.com/course" target="_blank"><i>Trybe</i></a> para poder ingressar no curso e iniciar essa jornada que vale a pena.</p>
+                </aside>
     </main>
     <footer id="rodape">
         <address>
