bug do link resolvido

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
       <h1 id="titulo">Validação de conhecimentos- TRYBER</h1>
       <nav class="nav">
         <ul>
-          <li><a href="#"></a>Home</li>
-          <li><a href="#"></a>Contato</li>
+          <li><a href="index.html">Home</a></li>
+          <li>
+            <a href="https://github.com/PedroFonseca13" target="_blank"
+              >Contato</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -39,7 +43,8 @@
 
         <p>
           Conheça outros projetos de <strong>Pedro Fonseca</strong> no
-          <a href="#" target="_blank">GitHub</a>.
+          <a href="https://github.com/PedroFonseca13" target="_blank">GitHub</a
+          >.
         </p>
       </div>
 
@@ -102,10 +107,35 @@
         </aside>
       </section>
 
-      <div class="clear"></div>
+      <div class="clear">
+        <table>
+          <thead>
+            <tr>
+              <th>Código</th>
+              <th>Descrição</th>
+              <th>Categoria</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>001</td>
+              <td>Notebook i7 8GB Branco</td>
+              <td>Informática</td>
+            </tr>
+            <tr>
+              <td>002</td>
+              <td>Caneta Esferográfica Azul</td>
+              <td>Papelaria</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </main>
     <footer id="rodape" class="clear">
-      <p>&copy;Powered by <a href="http"></a></p>
+      <p>
+        &copy;Powered by
+        <a href="https://github.com/PedroFonseca13" target="_blank">Pedro Fonseca</a>
+      </p>
     </footer>
   </body>
 </html>
