--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <!--4. Adicione uma lista de lições aprendidas à página-->
     <section class="listas">
-      <h2>Liçoes Aprendidas</h2>
+      <h2>Lições Aprendidas</h2>
       <ol id="licoes_aprendidas">
         <li>O que é Unix e Bash.</li>
         <li>Principais comandos utilizados no Bash</li>
@@ -42,13 +42,13 @@
     <section class="listas">
       <!--5. Crie uma lista de lições que ainda deseja aprender para a página-->
       <ul id="licoes_a_aprender">
-        <h2>Liçoes a Aprender</h2>
+        <h2>Lições a Aprender</h2>
         <li>Aprofundamento do HTML</li>
         <li>Aprofundamento do CSS</li>
         <li>JavaScript</li>
         <li>Técnicas para melhorar o acesso do usuário</li>
         <li>Técnicas para aumentar o engajamento da página</li>
-        <li>Trabalhar o design dos sites de forma ficar mais agradável</li>
+        <li>Trabalhar o design dos sites de forma a ficar mais agradável</li>
         <li>Formas eficientes de resolver "bugs" no site</li>
         <li>Entender que outras aplicações são importantes também ter conhecimento ao fazer uma página, por exemplo, programas de edição de imagem</li>
         <li>Aplicação Front-end</li>
@@ -60,19 +60,20 @@
     <article class="caixa lado-direito">
       <section>
         <h2>Meu aprendizado na Trybe</h2>
-        <p>A Trybe apresenta um jeito único de fazer a gente aprender, aqui nós não nos desenvolvemos somente para seremprogramadores, mas sim, tudo que um verdadeiro profissional precisa possuir, como resiliência, respeito epreocupação pelo próximo. Vale afirmar também, que a ela nos fornece um material incrível, bem detalhado e comum nível além do básico. Além disso, conta com uma equipe de funcionários sensacional,que prestam apoio para todos independente do problema.</p>
+        <p>A Trybe apresenta um jeito único de fazer a gente aprender, aqui nós não nos desenvolvemos somente para ser programadores, mas sim, tudo que um verdadeiro profissional precisa possuir, como resiliência, respeito e preocupação pelo próximo. Vale afirmar também, que ela nos fornece um material incrível, bem detalhado e com um nível além do básico. Além disso, conta com uma equipe de colaboradores sensacional,que prestam apoio para todos, independente do problema.</p>
       </section>
     </article>
     <!--9. Crie uma seção que conta uma passagem sobre seu aprendizado-->
     <section class="caixa lado-esquerdo">
       <aside>
         <h2>Uma passagem na Trybe</h2>
-        <p> O meu primeiro projeto na Trybe, se chamou "lessons-leaned". Neste, fui responsável por montar um site do zero, seguindo diversas regras que me desafiava a todo instante. Se você quiser enfrentar isso também, acesse o site da Trybe e se inscrevendo. </p>
+        <p> O meu primeiro projeto na Trybe, se chamou "lessons-learned". Neste, fui responsável por montar um site do zero, seguindo diversas regras que me desafiavam a todo instante. Se você quiser enfrentar isso também, acesse <a href="https://www.betrybe.com/">Trybe</a>Trybe e se inscreva. </p>
+        
       </aside>
     </section>
     <section class="caixa">
       <h2>O que você irá aprender na Trybe?</h2>
-      <p>A Trybe possui o foco de desenvolver um programador, principalmente Web. O curso é divido em módulo, onde cada um apresenta diversos conteúdos que serão aprendidos a cada dia. Na tabela abaixo, encontra-se quais são esses blocos:</p>
+      <p>A Trybe possui o foco de desenvolver programadores, principalmente voltados a desenvolvimento Web. O curso é divido em módulo, onde cada um apresenta diversos conteúdos que serão aprendidos a cada dia. Na tabela abaixo, encontra-se quais são esses blocos:</p>
       <!--12. link uma tabela à página-->
       <table>
         <tr>
