Ajustando para resolução 1366x768 / Faltando títulos e lado-lado

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
         </ol>
 
         <ul id="licoes_a_aprender">
-            <li>Lição a aprender 1</li>
-            <li>Lição a aprender 2</li>
-            <li>Lição a aprender 3</li>
-            <li>Lição a aprender 4</li>
-            <li>Lição a aprender 5</li>
-            <li>Lição a aprender 6</li>
-            <li>Lição a aprender 7</li>
-            <li>Lição a aprender 8</li>
-            <li>Lição a aprender 9</li>
-            <li>Lição a aprender 10</li>
+            <li>JavaScript</li>
+            <li>JavaScript ES6</li>
+            <li>Jest - Testes</li>
+            <li>React</li>
+            <li>Metodologias Ágeis</li>
+            <li>Context API</li>
+            <li>SQL</li>
+            <li>MongoDB</li>
+            <li>NodeJS</li>
+            <li>Arquitetura Rest e Restful</li>
 
         </ul>
     </section>
@@ -66,15 +66,19 @@
     <table class="tabela" border="1">
         <tr>
             <td class="table-title"><strong>Aulas</strong></td>
-            <td>total</td>
+            <td>Valor</td>
         </tr>
         <tr>
-          <td class="table-title"><strong>Presente</strong></td>
-          <td>y</td>
+          <td class="table-title"><strong>Total de aulas do curso</strong></td>
+          <td>240</td>
         </tr>
         <tr>
-          <td class="table-title"><strong>Frequência</strong></td>
-          <td>x</td>
+          <td class="table-title"><strong>Aulas já assistidas</strong></td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td class="table-title"><strong>Percentual assistido</strong></td>
+          <td>5%</td>
         </tr>
 
     </table>
