codigo passado novamente pelo npm test. Bugs resolvidos

--- a/index.html
+++ b/index.html
@@ -111,21 +111,16 @@
         <table>
           <thead>
             <tr>
-              <th>Código</th>
-              <th>Descrição</th>
-              <th>Categoria</th>
+              <th>Nome</th>
+              <th>E-mail</th>
+              <th>GitHub</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>001</td>
-              <td>Notebook i7 8GB Branco</td>
-              <td>Informática</td>
-            </tr>
-            <tr>
-              <td>002</td>
-              <td>Caneta Esferográfica Azul</td>
-              <td>Papelaria</td>
+              <td>Pedro</td>
+              <td>pedrinhopedro01@gmail.com</td>
+              <td>PedroFonseca13</td>
             </tr>
           </tbody>
         </table>
