--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--barra superior/ -->
+    <header>
+        <h1>Conteudos Adquiridos.
+            <img src="" alt="">;
+
+        </h1>
+    </header>
+    <nav>
+        <h4>
+            <li></li>
+        </h4>
+    </nav>
 </body>
 </html>
