completa os requisitos 2 e de 4 à 10

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="cabecalho"> 
-            <h1 id ="titulo"> lições aprendidas trybe </h1>
-        </div> 
+        <header>
+            <div id="cabecalho"> 
+                <h1 id ="titulo"> lições aprendidas trybe </h1>
+            </div> 
+            <nav>
+                <a href="https://github.com/tryber/sd-016-b-project-lessons-learned" target="_blank">Projeto original</a>
+            </nav>
+        </header>
         <div id="informacoes"></div>
             <div id="bloco-da-imagem"> 
                 <img id="minha_foto" src="perfil.jpg" alt="">
@@ -43,7 +48,8 @@
                 <li>NODE</li>
                 <li>SQL/li>
             </ul>
-        <div id ="Artigos">
+        </div>
+        <div id ="artigos">
             <article>
                 Estudar na Trybe têm se mostrado uma das experiências mais proveitosas e desafiadoras 
                 que tive o prazer de fazer parte. dentro do curto prazo de duas semanas e alguns dias, 
@@ -53,12 +59,12 @@
             <aside>
                 <section>
                     Nunca antecipei que o método ativo de aprendizado empregado no curso da Trybe seria
-                    tão eficiente pra mim
+                    tão eficiente pra mim                
                 </section>
             </aside>
         </div>
         </div>
-        <a href="https://github.com/tryber/sd-016-b-project-lessons-learned" target="_blank">link externo</a>
-        <footer id="rodape">rodape</footer>
+        <footer id="rodape">Propriedade: <a href="https://github.com/hlremanuel16" target="_blank">hlremanuel16</a></footer>
+            
     </body>
 </html>
