--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                 <table>
                     <tbody>
                         <tr>
-                            <th>Soft skill</th>
-                            <th>Progresso</th>
+                            <th colspan="2">Gabriel Rodrigues Leite</th>
+                            <!-- <th>Progresso</th> -->
                         </tr>
                         <tr>
-                            <td >skill1</td>
-                            <td><progress value="34" max="100"></progress></td>
+                            <td >HTML5</td>
+                            <td><progress value="85" max="100"></progress></td>
                         </tr>
                         <tr>
-                            <td>skill2</td>
-                            <td><progress value="78" max="100"></progress></td>
+                            <td>CSS</td>
+                            <td><progress value="15" max="100"></progress></td>
                         </tr>
                     </tbody>
                 </table>
@@ -72,32 +72,32 @@
                 <section class="lado-esquerdo">
                     <h3>Lições aprendidas:</h3>
                     <ol id="licoes_aprendidas">
-                        <li>paasdf</li>
-                        <li>asdfasdf</li>
-                        <li>asdfasdf</li>
-                        <li>paasdf</li>
-                        <li>asdfasdf</li>
-                        <li>asdfasdf</li>
-                        <li>paasdf</li>
-                        <li>asdfasdf</li>
-                        <li>asdfasdf</li>
-                        <li>wieruov</li>
+                        <li>Fundamentos Web</li>
+                        <li>Unix & Bash</li>
+                        <li>Git e Github</li>
+                        <li>Internet</li>
+                        <li>Html Semântico</li>
+                        <li>CSS</li>
+                        <li>Autoconhecimento</li>
+                        <li>Empatia</li>
+                        <li>Soft Skills</li>
+                        <li>Inteligência Emocional</li>
                     </ol>
                 </section>
                 <!-- Requisito 05 - OK -->
                 <section class="lado-direito">
                     <h3>Lições a aprender:</h3>
                     <ul id="licoes_a_aprender">
-                        <li>paasdf</li>
-                        <li>asdfasdf</li>
-                        <li>asdfasdf</li>
-                        <li>paasdf</li>
-                        <li>asdfasdf</li>
-                        <li>asdfasdf</li>
-                        <li>asdfasdf</li>
-                        <li>paasdf</li>
-                        <li>asdfasdf</li>
-                        <li>wieruov</li>
+                        <li>Javascript</li>
+                        <li>React e Redux</li>
+                        <li>Metodologias Ágeis</li>
+                        <li>Bancos de dados</li>
+                        <li>Sockets</li>
+                        <li>SOLID e ORM</li>
+                        <li>Python</li>
+                        <li>OOB</li>
+                        <li>Algoritmos</li>
+                        <li>Estruturas de Dados</li>
                     </ul>
                 </section>
             </div>
