--- a/index.html
+++ b/index.html
@@ -1,63 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <title>Lessons Learned SD 16 B</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
-    <title>Lessons Learned SD 16 B</title>
   </head>
-  <header id="cabecalho">
-    <h1 id="titulo">Lições aprendidas - Trybe!</h1>
-    <p><a href="https://www.betrybe.com/" target="_blank">Home</a></p>
-    <p><a href="https://app.betrybe.com/course" target="_blank">Login</a></p>
-  </header>
   <body>
+    <header id="cabecalho">
+      <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+      <p><a href="https://www.betrybe.com/" target="_blank">Home</a></p>
+      <p><a href="https://app.betrybe.com/course" target="_blank">Login</a></p>
+    </header>
     <img id="minha_foto" src="foto_fas.jpg" alt="Foto Flávio Alves" />
     <p>
       <a href="https://www.linkedin.com/in/fasouzarj" target="_blank"
         >Flávio Alves</a
       >
     </p>
-    <section>
-      <nav>
-        <table>
-          <tr>
-            <th>Lições</th>
-          </tr>
-          <tr>
-            <td>
-              <ol id="licoes_aprendidas">
-                <li>Unix</li>
-                <li>Bash</li>
-                <li>Git</li>
-                <li>Git Hub</li>
-                <li>Internet</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Autoconhecimento</li>
-                <li>Empatia</li>
-                <li>Profissionalismo</li>
-              </ol>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <ul id="licoes_a_aprender">
-                <li>JavaScript</li>
-                <li>Python</li>
-                <li>Java</li>
-                <li>Node</li>
-                <li>UX</li>
-                <li>UI</li>
-                <li>Kotlin</li>
-                <li>Kubernetes</li>
-                <li>Gestão do Tempo</li>
-                <li>Gestão de Crises</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
+     <nav>
+        <p>Lições</p>
+        <section id="lista_licoes_aprendidas">
+        <div>
+                <table>
+             <td>
+                <ol id="licoes_aprendidas">
+                  <li>Unix</li>
+                  <li>Bash</li>
+                  <li>Git</li>
+                  <li>Git Hub</li>
+                  <li>Internet</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>Autoconhecimento</li>
+                  <li>Empatia</li>
+                  <li>Profissionalismo</li>
+                </ol>
+              </td>
+          </div>
+          </section>
+        <section id = "lista_licoes_a_aprender">
+          <div>
+        <td>
+                <ul id="licoes_a_aprender">
+                  <li>JavaScript</li>
+                  <li>Python</li>
+                  <li>Java</li>
+                  <li>Node</li>
+                  <li>UX</li>
+                  <li>UI</li>
+                  <li>Kotlin</li>
+                  <li>Kubernetes</li>
+                  <li>Gestão do Tempo</li>
+                  <li>Gestão de Crises</li>
+                </ul>
+              </td>
+          </table>
+        </div>
+      </section>
       </nav>
-      <article>
+          <article>
         <p>
           Muito mais que aprender Front-end utilizando HTML, CSS, Javascript e
           React; Back-end utilizando Banco de Dados, API Rest implementando
